docs/apache-airflow-providers-google/8.3.0/_sources/_api/airflow/providers/google/cloud/links/dataform/index.rst.txt
:py:mod:`airflow.providers.google.cloud.links.dataform`
=======================================================

.. py:module:: airflow.providers.google.cloud.links.dataform

.. autoapi-nested-parse::

   This module contains Google Dataflow links.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.dataform.DataformWorkflowInvocationLink




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.dataform.DATAFORM_BASE_LINK
   airflow.providers.google.cloud.links.dataform.DATAFORM_WORKFLOW_INVOCATION_LINK


.. py:data:: DATAFORM_BASE_LINK
   :annotation: = https://pantheon.corp.google.com/bigquery/dataform

   

.. py:data:: DATAFORM_WORKFLOW_INVOCATION_LINK
   

   

.. py:class:: DataformWorkflowInvocationLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Dataflow Job Link

   .. py:attribute:: name
      :annotation: = Dataform Workflow Invocation

      

   .. py:attribute:: key
      :annotation: = dataform_workflow_invocation_config

      

   .. py:attribute:: format_str
      

      

   .. py:method:: persist(operator_instance, context, project_id, region, repository_id, workflow_invocation_id)
      :staticmethod:



