docs/apache-airflow-providers-google/8.6.0/_sources/_api/airflow/providers/google/cloud/links/dataform/index.rst.txt
:py:mod:`airflow.providers.google.cloud.links.dataform`
=======================================================

.. py:module:: airflow.providers.google.cloud.links.dataform

.. autoapi-nested-parse::

   This module contains Google Dataflow links.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.dataform.DataformWorkflowInvocationLink
   airflow.providers.google.cloud.links.dataform.DataformRepositoryLink
   airflow.providers.google.cloud.links.dataform.DataformWorkspaceLink




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.dataform.DATAFORM_BASE_LINK
   airflow.providers.google.cloud.links.dataform.DATAFORM_WORKFLOW_INVOCATION_LINK
   airflow.providers.google.cloud.links.dataform.DATAFORM_REPOSITORY_LINK
   airflow.providers.google.cloud.links.dataform.DATAFORM_WORKSPACE_LINK


.. py:data:: DATAFORM_BASE_LINK
   :annotation: = /bigquery/dataform

   

.. py:data:: DATAFORM_WORKFLOW_INVOCATION_LINK
   

   

.. py:data:: DATAFORM_REPOSITORY_LINK
   

   

.. py:data:: DATAFORM_WORKSPACE_LINK
   

   

.. py:class:: DataformWorkflowInvocationLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Dataflow Job Link

   .. py:attribute:: name
      :annotation: = Dataform Workflow Invocation

      

   .. py:attribute:: key
      :annotation: = dataform_workflow_invocation_config

      

   .. py:attribute:: format_str
      

      

   .. py:method:: persist(operator_instance, context, project_id, region, repository_id, workflow_invocation_id)
      :staticmethod:



.. py:class:: DataformRepositoryLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Dataflow repository link.

   .. py:attribute:: name
      :annotation: = Dataform Repository

      

   .. py:attribute:: key
      :annotation: = dataform_repository

      

   .. py:attribute:: format_str
      

      

   .. py:method:: persist(operator_instance, context, project_id, region, repository_id)
      :staticmethod:



.. py:class:: DataformWorkspaceLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Dataform workspace link.

   .. py:attribute:: name
      :annotation: = Dataform Workspace

      

   .. py:attribute:: key
      :annotation: = dataform_workspace

      

   .. py:attribute:: format_str
      

      

   .. py:method:: persist(operator_instance, context, project_id, region, repository_id, workspace_id)
      :staticmethod:



